--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,8 @@
 <h1 class="mt-4">Dashboard</h1>
 <p class="lead mb-3">Welcome <%= name %></p>
-<a href="/quiz/chooseQuiz" class="btn btn-secondary">Choose Quiz</a>
+<a href="/quiz" class="btn btn-secondary">Choose Quiz</a>
 <a href="/quiz/createQuiz" class="btn btn-secondary">Create Quiz</a>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
 <a href="/users/delete" class="btn btn-secondary">Delete</a>
 <a href="/users/update" class="btn btn-secondary">Update</a>
+<a href="/about" class="btn btn-secondary">About</a>
